force-app/main/default/objects/User/fields/GOVTPOC_COTAR__c.field-meta.xml
<CustomField>
    <fullName>GOVTPOC_COTAR__c</fullName>
    <label>COTR for Contractors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>