force-app/main/default/objects/User/fields/LMT_User_Creation_First_Fail_Date__c.field-meta.xml
<CustomField>
    <fullName>LMT_User_Creation_First_Fail_Date__c</fullName>
    <label>LMT User Creation First Fail Date</label>
    <type>DateTime</type>
</CustomField>