force-app/main/default/objects/User/fields/LMT_User_Creation_IsFailed__c.field-meta.xml
<CustomField>
    <fullName>LMT_User_Creation_IsFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LMT User Creation IsFailed</label>
    <type>Checkbox</type>
</CustomField>