force-app/main/default/objects/User/fields/MAJOR_ORG_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>MAJOR_ORG_DESCRIPTION__c</fullName>
    <label>Master ORG Description</label>
    <length>60</length>
    <type>Text</type>
</CustomField>