force-app/main/default/objects/User/fields/NCMT_User_Level__c.field-meta.xml
<CustomField>
    <fullName>NCMT_User_Level__c</fullName>
    <label>NCMT User Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 0</fullName>
                <default>true</default>
                <label>Level 0</label>
            </value>
            <value>
                <fullName>Level I</fullName>
            </value>
            <value>
                <fullName>Level II</fullName>
            </value>
            <value>
                <fullName>Level IV</fullName>
            </value>
            <value>
                <fullName>Level V</fullName>
            </value>
            <value>
                <fullName>Central Office Portfolio Manager</fullName>
            </value>
            <value>
                <fullName>Level III OFM</fullName>
            </value>
            <value>
                <fullName>Level III ODC</fullName>
            </value>
            <value>
                <fullName>Office of Portfolio Management - Regular User</fullName>
            </value>
            <value>
                <fullName>Office of Portfolio Management - Super User</fullName>
            </value>
            <value>
                <fullName>Office of Leasing - Realty Specialist</fullName>
            </value>
            <value>
                <fullName>Office of Leasing - Project Management</fullName>
            </value>
            <value>
                <fullName>Office of Design and Construction - Estimating</fullName>
            </value>
            <value>
                <fullName>Office of Design and Construction - Quality Control</fullName>
            </value>
            <value>
                <fullName>Office of Design and Construction - Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Office of Design and Construction - Project Management</fullName>
            </value>
            <value>
                <fullName>Office of Design and Construction - Program Management</fullName>
            </value>
            <value>
                <fullName>Office of Design and Construction - System Administration</fullName>
            </value>
            <value>
                <fullName>Office of Facility Management - Building Management</fullName>
            </value>
            <value>
                <fullName>Office of Facility Management - Operational Excellence Program</fullName>
            </value>
            <value>
                <fullName>Oversight - Finance Level1</fullName>
            </value>
            <value>
                <fullName>Oversight - Finance Level2</fullName>
            </value>
            <value>
                <fullName>Oversight - Inspector General</fullName>
            </value>
            <value>
                <fullName>Oversight - OMB</fullName>
            </value>
            <value>
                <fullName>Office of Acquisition Management - Contracting</fullName>
            </value>
            <value>
                <fullName>External Agencies - Estimating Staff</fullName>
            </value>
            <value>
                <fullName>External Agencies - Others</fullName>
            </value>
            <value>
                <fullName>Office of Leasing</fullName>
                <isActive>false</isActive>
                <label>Office of Leasing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>