force-app/main/default/objects/User/fields/PBS_AAAP_Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Alternate_Phone__c</fullName>
    <label>Alternate Phone</label>
    <type>Phone</type>
</CustomField>