force-app/main/default/objects/User/fields/PBS_AAAP_PIN__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_PIN__c</fullName>
    <label>PIN</label>
    <length>6</length>
    <type>Text</type>
</CustomField>