force-app/main/default/objects/User/fields/PBS_AAAP_Regions__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Regions__c</fullName>
    <label>Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>National Capital Region</fullName>
            </value>
            <value>
                <fullName>Region 1</fullName>
            </value>
            <value>
                <fullName>Region 2</fullName>
            </value>
            <value>
                <fullName>Region 3</fullName>
            </value>
            <value>
                <fullName>Region 4</fullName>
            </value>
            <value>
                <fullName>Region 5</fullName>
            </value>
            <value>
                <fullName>Region 6</fullName>
            </value>
            <value>
                <fullName>Region 7</fullName>
            </value>
            <value>
                <fullName>Region 8</fullName>
            </value>
            <value>
                <fullName>Region 9</fullName>
            </value>
            <value>
                <fullName>Region 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>