force-app/main/default/objects/User/fields/Pers_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pers_Start_Date__c</fullName>
    <label>Pers Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>