force-app/main/default/objects/User/fields/SAML_Federation_ID_Custom__c.field-meta.xml
<CustomField>
    <fullName>SAML_Federation_ID_Custom__c</fullName>
    <description>This field is used for User Sync between orgs.</description>
    <externalId>true</externalId>
    <label>SAML Federation ID Custom</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>