force-app/main/default/objects/User/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <label>Supervisor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>