force-app/main/default/objects/User/fields/Supervisory_Status__c.field-meta.xml
<CustomField>
    <fullName>Supervisory_Status__c</fullName>
    <description>Code from CHRIS that identifies if an employee is a supervisor and the type of supervisor.</description>
    <inlineHelpText>Code from CHRIS that identifies if an employee is a supervisor and the type of supervisor.</inlineHelpText>
    <label>Supervisory Status</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>