force-app/main/default/objects/User/fields/UPN__c.field-meta.xml
<CustomField>
    <fullName>UPN__c</fullName>
    <label>UPN</label>
    <length>64</length>
    <type>Text</type>
</CustomField>