force-app/main/default/objects/User/fields/User_License__c.field-meta.xml
<CustomField>
    <fullName>User_License__c</fullName>
    <formula>Profile.UserLicense.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User License</label>
    <type>Text</type>
</CustomField>