force-app/main/default/objects/User/fields/User_Region__c.field-meta.xml
<CustomField>
    <fullName>User_Region__c</fullName>
    <label>Region</label>
    <length>25</length>
    <type>Text</type>
</CustomField>