force-app/main/default/objects/User/fields/WORK_BUILDING_PRIMARY__c.field-meta.xml
<CustomField>
    <fullName>WORK_BUILDING_PRIMARY__c</fullName>
    <label>Work Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>